// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
.c0 {
  font-size: 12px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(255,255,255,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  cursor: pointer;
}

.c0:focus,
.c0:active,
.c0:visited,
.c0:hover {
  color: rgba(255,255,255,1);
}

.c0:hover {
  color: #0150a7;
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 12px;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 12px;
  }
}

<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <a
    className="c0"
    href="/"
    itemProp="item"
    rel="_self"
    size={
      Object {
        "large": "uno",
        "medium": "uno",
        "small": "uno",
      }
    }
    target=""
  >
    Home
  </a>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
.c0 {
  font-size: 12px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(255,255,255,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  cursor: pointer;
}

.c0:focus,
.c0:active,
.c0:visited,
.c0:hover {
  color: rgba(255,255,255,1);
}

.c0:hover {
  color: #0150a7;
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 12px;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 12px;
  }
}

<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="c0"
    href={null}
    itemProp="item"
    rel="_self"
    size={
      Object {
        "large": "uno",
        "medium": "uno",
        "small": "uno",
      }
    }
    target=""
  >
    Home
  </span>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;
